--- a/Stadtapp/res/layout/activity_main.xml
+++ b/Stadtapp/res/layout/activity_main.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
+
+
+ <!-- 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +16,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.stadtrundgang.MainActivity" >
 
+   
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -32,5 +41,10 @@
         android:layout_alignRight="@+id/btn_gmap"
         android:layout_marginBottom="46dp"
         android:text="Photo" />
+ 
+    
+    
 
 </RelativeLayout>
+    -->
+    
