--- a/Stadtapp/res/layout/photo_layout.xml
+++ b/Stadtapp/res/layout/photo_layout.xml
@@ -46,4 +46,13 @@
         android:layout_alignParentRight="true"
         android:text="Hochladen" />
 
+    <TextView
+        android:id="@+id/tvkoordinaten"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </RelativeLayout>
