--- a/Stadtapp/res/layout/photo_layout.xml
+++ b/Stadtapp/res/layout/photo_layout.xml
@@ -32,7 +32,7 @@
         android:src="@drawable/icon_vorschau" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_photo"
         android:layout_width="160dp"
         android:layout_height="200dp"
         android:layout_alignParentLeft="true"
@@ -40,20 +40,11 @@
         android:text="Schnappschuss" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="Hochladen" />
-
-    <TextView
-        android:id="@+id/tvkoordinaten"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
